# farmers-eye-preprocess-data

./: .gitignore  README.md  analysis.ipynb  pyproject.toml
images_06to18/: download_lucas.sh  filter_urls.py  image_count.ipynb  preparing_folders.sh  selecting_images.py
images_22/: create_urls.py  download_lucas22.sh  image_count.ipynb  pictures_select.py  prepare_combined_images.py  preparing_folders.py  review_images.py  selecting_classes.py  selecting_images.py  test_crop_images.csv
