[project]
name = "lucas-images"
version = "0.1.0"
description = "Downloading LUCAS Crop Cover images for all campaigns and prepare test and train sets for 12 landcover classes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "csvkit>=2.2.0",
    "tqdm>=4.67.3",
]
